k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minimal-ingress
spec:
  rules:
  - host: backend.com
    http:
      paths:
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: backend-service
            port:
              number: 3500
  - host: frontend.com
    http:  
      paths: 
      - path: /
        pathType: Prefix
        backend:
          service:
            name: front-svc
            port:
              number: 3000
